k8s/app3-dashboard/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app3-dashboard
  labels:
    managed-by: argocd
