k8s/app3-dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3-dashboard
  namespace: app3-dashboard
  labels:
    app: app3-dashboard
  annotations:
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: app3-dashboard
